// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Matches shallow shapshot 1`] = `
<div
  className="src-shared-components-Loader-___LoaderStyle__Loader___ryDML src-shared-components-Loader-___LoaderStyle__Loader_small___3aRH-"
>
  <div
    className="src-shared-components-Loader-___LoaderStyle__Loader__container___28W25"
  >
    <div
      className="src-shared-components-Loader-___LoaderStyle__Loader__loader___2Ho6e"
    />
  </div>
</div>
`;

exports[`Matches shallow shapshot 2`] = `
<div
  className="src-shared-components-Loader-___LoaderStyle__Loader___ryDML"
>
  <div
    className="src-shared-components-Loader-___LoaderStyle__Loader__container___28W25"
  >
    <div
      className="src-shared-components-Loader-___LoaderStyle__Loader__loader___2Ho6e"
    />
  </div>
</div>
`;
